# cpp_belt

./: CMakeLists.txt
red/: CMakeLists.txt
red/week_1/: 06_uniq_id.cpp  CMakeLists.txt
red/week_1/01_max_element_if/: 01_max_element_if.cpp  test_runner.h
red/week_1/02_log/: 02_log.cpp  test_runner.h
red/week_1/03_sort_by/: 03_sort_by.cpp  airline_ticket.h
red/week_1/04_update_field/: 04_update_field.cpp  airline_ticket.h
red/week_1/05_print_values/: 05_print_values.cpp
red/week_1/07_table/: 07_table.cpp
red/week_1/08_deque/: 08_deque.cpp  deque.h  test_runner.h
red/week_1/09_paginator/: 09_paginator.cpp
red/week_2/: 02_learner.cpp  03_route_manager.cpp  04_ebook.cpp  CMakeLists.txt
red/week_2/01_sort_students/: 01_sort_students.cpp  student.h
red/week_2/05_hotel_booking/: 05_hotel_booking.cpp
red/week_2/06_object_pool/: CMakeLists.txt
red/week_3/: CMakeLists.txt
red/week_3/01_object_pool/: 01_object_pool.cpp  test_runner.h
red/week_3/02_swap_sort_copy/: 02_swap_sort_copy.cpp
red/week_3/03_simple_vector/: 03_simple_vector.cpp  simple_vector.h
red/week_3/04_linked_list/: 04_linked_list.cpp
red/week_4/: CMakeLists.txt
red/week_4/01_athlets/: 01_athlets.cpp
red/week_4/02_stack_vector/: 02_stack_vector.cpp  stack_vector.h
red/week_4/03_translator/: 03_translator.cpp
red/week_4/04_airport_counter/: 04_airport_counter.cpp  profile.h
white/: CMakeLists.txt
white/week_1/: 01_a+b.cpp  02_min_string.cpp  03_equation.cpp  04_division.cpp  05_merch_price.cpp  06_even_numbers.cpp  07_second_occurence.cpp  08_gcd.cpp  09_binary.cpp  CMakeLists.txt
white/week_2/: 01_factorial.cpp  02_palindrom.cpp  03_palindrom_filter.cpp  04_update_if_greater.cpp  05_move_string.cpp  06_reverse.cpp  07_reversed.cpp  08_hot_days.cpp  09_queue.cpp  10_monthly_tasks.cpp  11_anagram.cpp  12_countries.cpp  13_buses_1.cpp  14_buses_2.cpp  15_unique.cpp  16_map_values.cpp  17_synonyms.cpp  18_buses_3.cpp  CMakeLists.txt
white/week_3/: 01_abs_sort.cpp  02_sort_strings.cpp  03_sorted_strings.cpp  04_names_1.cpp  05_names_2.cpp  06_reversible_string.cpp  07_names_3.cpp  08_incognizable.cpp  CMakeLists.txt
white/week_4/: 01_spec_struct.cpp  02_invertible_function.cpp  03_invertible_function_with_mult.cpp  07_students_list.cpp  08_rational.cpp  09_ensure_equal.cpp  10_rational_exception.cpp  11_rational_calculator.cpp  12_time_server.cpp  CMakeLists.txt
white/week_4/04_file_input_output/: 04_file_input_output.cpp  CMakeLists.txt
white/week_4/05_print_with_precision/: 05_print_with_precision.cpp
white/week_4/06_table_read_write/: 06_table_read_write.cpp
white/week_5/: CMakeLists.txt  white_final.cpp
yellow/: CMakeLists.txt
yellow/week_1/: 01_matrix_sum.cpp  02_avg_temperature_2.cpp  03_block_mass.cpp  04_find_max_repetition_count.cpp  05_team_tasks.cpp  06_square_all.cpp  07_get_ref_strict.cpp  CMakeLists.txt
yellow/week_2/: 01_buses_refactor.cpp  02_test_equation.cpp  03_names_1_test.cpp  04_test_rational.cpp  05_test_palindrome.cpp  CMakeLists.txt
yellow/week_3/: CMakeLists.txt
yellow/week_3/01_sum_reverse_sort/: CMakeLists.txt  main.cpp  sum_reverse_sort.cpp
yellow/week_3/02_phone_number/: CMakeLists.txt  main.cpp  phone_number.cpp  phone_number.h
yellow/week_3/03_rectangle/: CMakeLists.txt  main.cpp  rectangle.cpp  rectangle.h  test_runner.h
yellow/week_3/04_decomposition_2/: CMakeLists.txt  bus_manager.cpp  bus_manager.h  main.cpp  query.cpp  query.h  responses.cpp  responses.h
yellow/week_4/: 01_print_vector_part.cpp  02_set_part.cpp  03_split_into_words.cpp  04_remove_duplicates.cpp  05_permutations.cpp  06_demographics.cpp  07_merge_sort.cpp  08_personal_budget_starter.cpp  09_personal_budget_starter_plus.cpp  10_find_nearest_element.cpp  11_names_4.cpp  12_find_starts_with_part_1.cpp  12_find_starts_with_part_2.cpp  13_building_arithmetic_expression_part_1.cpp  13_building_arithmetic_expression_part_2.cpp  CMakeLists.txt
yellow/week_5/: 01_first_inheritance.cpp  02_notification_sender.cpp  03_shapes.cpp  04_refactoring.cpp  CMakeLists.txt
yellow/week_6/: CMakeLists.txt  comparison.h  condition_parser.cpp  condition_parser.h  condition_parser_test.cpp  database.cpp  database.h  date.cpp  date.h  db_container.cpp  db_container.h  db_tests.cpp  db_tests.h  event.cpp  event.h  logical_operation.h  main.cpp  node.cpp  node.h  test_runner.cpp  test_runner.h  token.cpp  token.h
