project(red_week_1)

add_subdirectory(01_max_element_if)
add_subdirectory(02_log)
add_subdirectory(03_sort_by)
add_subdirectory(04_update_field)
add_subdirectory(05_print_values)
add_executable(06_uniq_id 06_uniq_id.cpp)
add_subdirectory(07_table)
add_subdirectory(08_deque)
add_subdirectory(09_paginator)
