project(white_week_2)

add_executable(01_factorial 01_factorial.cpp)
add_executable(02_palindrom 02_palindrom.cpp)
add_executable(03_palindrom_filter 03_palindrom_filter.cpp)
add_executable(04_update_if_greater 04_update_if_greater.cpp)
add_executable(05_move_string 05_move_string.cpp)
add_executable(06_reverse 06_reverse.cpp)
add_executable(07_reversed 07_reversed.cpp)
add_executable(08_hot_days 08_hot_days.cpp)
add_executable(09_queue 09_queue.cpp)
add_executable(10_monthly_tasks 10_monthly_tasks.cpp)
add_executable(11_anagram 11_anagram.cpp)
add_executable(12_countries 12_countries.cpp)
add_executable(13_buses_1 13_buses_1.cpp)
add_executable(14_buses_2 14_buses_2.cpp)
add_executable(15_unique 15_unique.cpp)
add_executable(16_map_values 16_map_values.cpp)
add_executable(17_synonyms 17_synonyms.cpp)
add_executable(18_buses_3 18_buses_3.cpp)
