project(white_week_4)

add_executable(01_spec_struct 01_spec_struct.cpp)
add_executable(02_invertible_function 02_invertible_function.cpp)
add_executable(03_invertible_function_with_mult 03_invertible_function_with_mult.cpp)
add_subdirectory(04_file_input_output)
add_subdirectory(05_print_with_precision)
add_subdirectory(06_table_read_write)
add_executable(07_students_list 07_students_list.cpp)
add_executable(08_rational 08_rational.cpp)
add_executable(09_ensure_equal 09_ensure_equal.cpp)
add_executable(10_rational_exception 10_rational_exception.cpp)
add_executable(11_rational_calculator 11_rational_calculator.cpp)
add_executable(12_time_server 12_time_server.cpp)
