cmake_minimum_required(VERSION 3.17)
project(yellow)

set(CMAKE_CXX_STANDARD 20)

add_executable(01_matrix_sum 01_matrix_sum.cpp)
add_executable(02_avg_temperature_2 02_avg_temperature_2.cpp)
add_executable(03_block_mass 03_block_mass.cpp)
add_executable(04_find_max_repetition_count 04_find_max_repetition_count.cpp)
