project(yellow_week_4)

add_executable(01_print_vector_part 01_print_vector_part.cpp)
add_executable(02_set_part 02_set_part.cpp)
add_executable(03_split_into_words 03_split_into_words.cpp)
add_executable(04_remove_duplicates 04_remove_duplicates.cpp)
add_executable(05_permutations 05_permutations.cpp)
add_executable(06_demographics 06_demographics.cpp)
