project(yellow_week_4)

add_executable(01_print_vector_part 01_print_vector_part.cpp)
add_executable(02_set_part 02_set_part.cpp)
add_executable(03_split_into_words 03_split_into_words.cpp)
add_executable(04_remove_duplicates 04_remove_duplicates.cpp)
add_executable(05_permutations 05_permutations.cpp)
add_executable(06_demographics 06_demographics.cpp)
add_executable(07_merge_sort 07_merge_sort.cpp)
add_executable(08_personal_budget_starter 08_personal_budget_starter.cpp)
add_executable(09_personal_budget_starter_plus 09_personal_budget_starter_plus.cpp)
add_executable(10_find_nearest_element 10_find_nearest_element.cpp)
add_executable(11_names_4 11_names_4.cpp)
add_executable(12_find_starts_with_part_1 12_find_starts_with_part_1.cpp)
add_executable(12_find_starts_with_part_2 12_find_starts_with_part_2.cpp)
add_executable(13_building_arithmetic_expression_part_1 13_building_arithmetic_expression_part_1.cpp)
add_executable(13_building_arithmetic_expression_part_2 13_building_arithmetic_expression_part_2.cpp)
